modificado el informe para que los tokens esten case insensitive, y agregado el script con el que lo hice :P

--- a/Entrega 3/informe/informe.tex
+++ b/Entrega 3/informe/informe.tex
@@ -48,10 +48,10 @@ Less\_Equal\_Op			& {\ttfamily <=} \\ \hline
 Add\_Op		 					& {\ttfamily +}\\ \hline
 Minus\_Op 					& {\ttfamily -}\\ \hline
 Multiply\_Op				& {\ttfamily *}\\ \hline
-Div\_Op							& {\ttfamily div}\\\hline
-Not\_LogOp 					& {\ttfamily not} \\ \hline
-Or\_LogOp 					& {\ttfamily or} \\ \hline
-And\_LogOp 					& {\ttfamily and} \\ \hline
+Div\_Op							& {\ttfamily [dD][iI][vV]}\\\hline
+Not\_LogOp 					& {\ttfamily [nN][oO][tT]} \\ \hline
+Or\_LogOp 					& {\ttfamily [oO][rR]} \\ \hline
+And\_LogOp 					& {\ttfamily [aA][nN][dD]} \\ \hline
 Equal 							& {\ttfamily =} \\ \hline
 Type\_Declaration 	& {\ttfamily :} \\ \hline
 Assignment 					& {\ttfamily :=} \\ \hline
@@ -63,21 +63,21 @@ Open\_Parenthesis 	& {\ttfamily (} \\ \hline
 Close\_Parenthesis 	& {\ttfamily )} \\ \hline
 Open\_Bracket 			& {\ttfamily [} \\ \hline
 Close\_Bracket 			& {\ttfamily ]} \\ \hline
-Program 						& {\ttfamily program} \\ \hline
-Type 								& {\ttfamily type} \\ \hline
-Const 							& {\ttfamily const} \\ \hline
-Var 								& {\ttfamily var} \\ \hline
-Function 						& {\ttfamily function} \\ \hline
-Procedure 					& {\ttfamily procedure} \\ \hline
-Array 							& {\ttfamily array} \\ \hline
-Of 									& {\ttfamily of} \\ \hline
-Begin 							& {\ttfamily begin} \\ \hline
-End 								& {\ttfamily end} \\ \hline
-While 							& {\ttfamily while} \\ \hline
-Do 									& {\ttfamily do} \\ \hline
-If 									& {\ttfamily if} \\ \hline
-Then 								& {\ttfamily then} \\ \hline
-Else 								& {\ttfamily else} \\ \hline
+Program 						& {\ttfamily [pP][rR][oO][gG][rR][aA][mM]} \\ \hline
+Type 								& {\ttfamily [tT][yY][pP][eE]} \\ \hline
+Const 							& {\ttfamily [cC][oO][nN][sS][tT]} \\ \hline
+Var 								& {\ttfamily [vV][aA][rR]} \\ \hline
+Function 						& {\ttfamily [fF][uU][nN][cC][tT][iI][oO][nN]} \\ \hline
+Procedure 					& {\ttfamily [pP][rR][oO][cC][eE][dD][uU][rR][eE]} \\ \hline
+Array 							& {\ttfamily [aA][rR][rR][aA][yY]} \\ \hline
+Of 									& {\ttfamily [oO][fF]} \\ \hline
+Begin 							& {\ttfamily [bB][eE][gG][iI][nN]} \\ \hline
+End 								& {\ttfamily [eE][nN][dD]} \\ \hline
+While 							& {\ttfamily [wW][hH][iI][lL][eE]} \\ \hline
+Do 									& {\ttfamily [dD][oO]} \\ \hline
+If 									& {\ttfamily [iI][fF]} \\ \hline
+Then 								& {\ttfamily [tT][hH][eE][nN]} \\ \hline
+Else 								& {\ttfamily [eE][lL][sS][eE]} \\ \hline
 EOF 								&  \\ \hline
 \end{tabular}
 \label{tab:tokens}
