--- a/entrega3/informe/informe.tex
+++ b/entrega3/informe/informe.tex
@@ -229,8 +229,12 @@ Antes de comenzar con la modificación, se corrigieron los errores marcados por l
 
 \end{verbatim}
 
-\section{Introducción de los tokens en la gramática}
+\section{Pasaje a notación BNF}
 
-Como siguiente paso en la adaptación de la gramática, se reemplazaron los terminales por los tokens que devuelve \textbf{LexAn}. Para esto, se adoptó la convención de dejar los no terminales en minúscula, mientras que los tokens (terminales) se encuentran en MAYÚSCULA.
+Como siguiente paso en la adaptación de la gramática, se reemplazaron los terminales por los tokens que devuelve \textbf{LexAn}. Para esto, se adoptó la convención de dejar los no terminales en minúscula, mientras que los tokens (terminales) se encuentran en MAYÚSCULA. Luego, se eliminaron las extenciones propias de la notación EBNF.
+
+\begin{verbatim}
+
+\end{verbatim}
 
 \end{document}
